--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 
 <h1>Hello World</h1>
 <p>Very innovative open source project!</p>
+  <ul>
+    <li>Kera</li>
+    <li>Banana</li>
+  </ul>
 
 
 </body>
